--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nahu R Dev</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./assets/codelog.svg" type="image/x-icon">
@@ -17,7 +18,7 @@
 <body>
     <header class="header">
         <a href="#" id="header">
-            <img src="./assets/codigo-fuente.png" alt="">
+            <img src="./assets/codigo-fuente.png" alt="Logo Sitio Web">
         </a>
         <nav class="navbar">
             <li><a href="#about">Sobre mí</a></li>
@@ -26,52 +27,37 @@
         </nav>
     </header>
     <main id="presentation" class="presentation">
-        <div class="title-hr"></div>
-        <div class="column-60">
-            <h1>Soy Nahuel, <span>Fullstack Web <strong>Developer</strong></span></h1>
-            <p>¡Hola!, soy un Desarrollador Fullstack Web. Me especializo en la creación de soluciones web eficientes,
-                abarcando tanto el frontend como el backend. Mi enfoque integral garantiza resultados de alta calidad.
-                Explora mi portafolio para descubrir mi trayectoria y proyectos destacados. ¡Bienvenido a mi mundo de
-                desarrollo web!</p>
+        <div class="border-box-main">
+            <div class="column-60">
+                <h1>Soy Nahuel, <span>Fullstack Web <strong>Developer</strong></span></h1>
+                <p>¡Hola!, soy un Desarrollador Fullstack Web. Me especializo en la creación de soluciones web
+                    eficientes,
+                    abarcando tanto el frontend como el backend. Mi enfoque integral garantiza resultados de alta
+                    calidad.
+                    Explora mi portafolio para descubrir mi trayectoria y proyectos destacados. ¡Bienvenido a mi mundo
+                    de
+                    desarrollo web!</p>
+            </div>
+            <div class="nahu-container">
+                <img src="./assets/nahunicoR.png" alt="Nahuel Riveros Developer">
+            </div>
         </div>
-        <img src="./assets/nahunicoR.png" alt="Nahuel Riveros Developer">
         <div class="column-40">
-            <div class="sections no-show">
-                <div>
-                    <h3>SOBRE MÍ</h3>
-                    <p>
-                        Ven acompáñame, haz click aquí abajo, hay mas que quiero contarte sobre mí
-                    </p>
-                </div>
-                <a href="#about">Ver Más <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="line"></div>
-            <div class="sections no-show">
-                <div>
-                    <h3>MIS PROYECTOS</h3>
-                    <p>Si te interesa ver los proyectos en los que he trabajado clickea aquí por favor.
-                    </p>
-                </div>
-                <a href="#proyects">Ver Más <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="line"></div>
-            <div class="sections links">
-                <h3 class="follow">SÍGUEME EN MIS REDES</h3>
-                <ul>
-                    <li><a target="_blank" href="https://www.linkedin.com/in/nahuel-riveros"><i
-                                class="fa-brands fa-linkedin"></i></a>
-                    </li>
-                    <li><a target="_blank" href="https://www.github.com/nahunicoR"><i
-                                class="fa-brands fa-github"></i></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/nahuriveros"><i
-                                class="fa-brands fa-instagram"></i></a></li>
-                    <li><a target="_blank" href=""><i class="fa-brands fa-x-twitter"></i></a></li>
-                    <li><a target="_blank" href="mailto:nahunico.r@gmail.com"><i class="fa-regular fa-envelope"></i></a>
-                    </li>
-                    <li><a href="./assets/CV/CV-Nahuel-Riveros.pdf" download><i
-                                class="fa-solid fa-cloud-arrow-down"></i></a></li>
-                </ul>
-            </div>
+            <h3 class="follow">SÍGUEME EN MIS REDES</h3>
+            <ul>
+                <li><a target="_blank" href="https://www.linkedin.com/in/nahuel-riveros"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li><a target="_blank" href="https://www.github.com/nahunicoR"><i class="fa-brands fa-github"></i></a>
+                </li>
+                <li><a target="_blank" href="https://www.instagram.com/nahuriveros"><i
+                            class="fa-brands fa-instagram"></i></a></li>
+                <li><a target="_blank" href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a target="_blank" href="mailto:nahunico.r@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                </li>
+                <li><a href="./assets/CV/CV-Nahuel-Riveros.pdf" download><i
+                            class="fa-solid fa-cloud-arrow-down"></i></a></li>
+            </ul>
         </div>
     </main>
     <section id="about">
@@ -88,17 +74,19 @@
             </p>
         </div>
         <div class="development">
-            <img src="./assets/lenguajes/HTML.svg" alt="HTML5">
-            <img src="./assets/lenguajes/css3.svg" alt="CSS3">
-            <img src="./assets/lenguajes/JS.svg" alt="JavaScript">
-            <img src="./assets/lenguajes/React.svg" alt="React JS">
-            <img src="./assets/lenguajes/redux.svg" alt="Redux JS">
-            <img src="./assets/lenguajes/nodeJs.svg" alt="Node JS">
-            <img src="./assets/lenguajes/python.svg" alt="Python">
-            <img src="./assets/lenguajes/express.svg" alt="Express JS">
-            <img src="./assets/lenguajes/postgresql.svg" alt="PostgreSQL">
-            <img src="./assets/lenguajes/mongoDb.svg" alt="Mongo DB">
-            <img src="./assets/lenguajes/mysql.svg" alt="MySQL">
+            <div>
+                <img src="./assets/lenguajes/HTML.svg" alt="HTML5">
+                <img src="./assets/lenguajes/css3.svg" alt="CSS3">
+                <img src="./assets/lenguajes/JS.svg" alt="JavaScript">
+                <img src="./assets/lenguajes/React.svg" alt="React JS">
+                <img src="./assets/lenguajes/redux.svg" alt="Redux JS">
+                <img src="./assets/lenguajes/nodeJs.svg" alt="Node JS">
+                <img src="./assets/lenguajes/python.svg" alt="Python">
+                <img src="./assets/lenguajes/express.svg" alt="Express JS">
+                <img src="./assets/lenguajes/postgresql.svg" alt="PostgreSQL">
+                <img src="./assets/lenguajes/mongoDb.svg" alt="Mongo DB">
+                <img src="./assets/lenguajes/mysql.svg" alt="MySQL">
+            </div>
         </div>
         <div class="about-text resumen">
             <p>En resumen, soy un profesional apasionado que combina lo mejor de ambos mundos: habilidades técnicas
@@ -154,7 +142,9 @@
                     localización de dicho restaurante. </p>
             </div>
             <div class="card">
-                <img id='photo' src="./assets/proyects/proyecto-3.jpg" alt="Proyecto numero 3">
+                <a href="https://github.com/nahunicoR/proyect-3">
+                    <img id='photo' src="./assets/proyects/proyecto-3.jpg" alt="Proyecto numero 3">
+                </a>
                 <p id="to-photo" class="text-proyect">Maquetación de HTML5, Estilos animaciones con CSS3, JavaScript
                     para
                     dinamismo,
@@ -162,7 +152,9 @@
                     fotografía y estética.</p>
             </div>
             <div class="card">
-                <img id="basic" src="./assets/proyects/Cocacola-img.jpg" alt="Primer Proyecto Coca Cola">
+                <a href="https://github.com/nahunicoR/primer-proyecto">
+                    <img id="basic" src="./assets/proyects/Cocacola-img.jpg" alt="Primer Proyecto Coca Cola">
+                </a>
                 <p id="to-basic" class="text-proyect">Proyecto básico del año 2017, primero vistazo al mundo del
                     desarrollo
                     web.
@@ -171,9 +163,28 @@
             </div>
         </div>
     </section>
-    <footer>
-        <p>Sitio Web Desarrollado por <span><a href="#presentation">Nahuel Riveros.</a></span> 💻 Todos los derechos
-            reservados 2023</p>
+    <footer id="footer">
+        <div class="text-footer">
+            <p>Sitio Web Desarrollado por <span><a href="#">Nahuel Riveros.</a></span> 💻 Todos los derechos
+                reservados 2024</p>
+        </div>
+        <div class="links-container">
+            <h3 class="follow-footer">SÍGUEME EN MIS REDES</h3>
+            <ul>
+                <li><a target="_blank" href="https://www.linkedin.com/in/nahuel-riveros"><i
+                            class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li><a target="_blank" href="https://www.github.com/nahunicoR"><i class="fa-brands fa-github"></i></a>
+                </li>
+                <li><a target="_blank" href="https://www.instagram.com/nahuriveros"><i
+                            class="fa-brands fa-instagram"></i></a></li>
+                <li><a target="_blank" href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a target="_blank" href="mailto:nahunico.r@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                </li>
+                <li><a href="./assets/CV/CV-Nahuel-Riveros.pdf" download><i
+                            class="fa-solid fa-cloud-arrow-down"></i></a></li>
+            </ul>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/5313e04952.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
