--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     con HTML5,
                     CSS3 y
                     funcionalidades y
-                    dinamismo con JavaScript. Cuenta con un formulario de contacto con PHP. Mas uso de Google Map, para
+                    dinamismo con JavaScript. Mas uso de Google Map, para
                     localización de dicho restaurante. </p>
             </div>
             <div class="card">
